#00004777: TitlePath: Support for german Umlaute

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -108,6 +108,9 @@ option.TitlePathURL.MixedLanguages.description=Enabling this will allow the gene
 option.TitlePathURL.IncludeKeys.title=Title path URLs: Include document keys
 option.TitlePathURL.IncludeKeys.description=Enabling this will make the title path URLs also contain the key of the addressed document. This makes addressation safer by eliminating problems with title changes and conflicts.
 
+option.TitlePathURL.AllowUmlaute.title=Title path URLs: Allow German Umlaute
+option.TitlePathURL.AllowUmlaute.description=Enabling this will allow Umlaute in title path URLs.
+
 option.WebTMLCache.ServeStaleData.title=WebTML Cache is allowed to server stale data while updating
 option.WebTMLCache.ServeStaleData.description=When enabled a WebTML Cache may return stale data while the cache is recalculated on another thread. Disabling this will make requests wait for the recalculation of needed caches instead, which may lead to resource bottlenecks.
 
