#00004828: Behaviour on portlet ajax failure

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/labels/tml_de.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/labels/tml_de.properties
@@ -1,4 +1,4 @@
-ajax.sessionexpired.message=Ihre Browser-Sitzung ist abgelaufen. Die aktuelle Aktion kann daher leider nicht ausgef\u00fchrt werden.\nDie Seite wird nun zur\u00fcckgesetzt.
+ajax.sessionexpired.message=Die aktuelle Aktion kann leider nicht ausgef\u00fchrt werden weil der Aktionslink in einer anderen Session erzeugt wurde.
 ajax.failure.intro=Ein Problem ist bei der Verarbeitung dieser Aktion aufgetreten. Die aktuelle Aktion kann daher leider nicht ausgef\u00fchrt werden:
 ajax.failure.reload=Die Seite wird nun zur\u00fcckgesetzt.
 
