--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/labels/tml_en.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/labels/tml_en.properties
@@ -1,4 +1,4 @@
-ajax.sessionexpired.message=Your browser session has expired. Unfortunately the current operation therefor cannot be executed.\nThe page will be reset now.
+ajax.sessionexpired.message=The current operation cannot be executed because the action link has been created in a different session.
 ajax.failure.intro=A problem has occured executing this operation. Unfortunately the current operation therefor cannot be executed:
 ajax.failure.reload=The page will be reset now.
 
