#00005015: New Language Behaviour "Browser preferred Languages"

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/lang/lang.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/lang/lang.properties
@@ -6,3 +6,6 @@ dynamic.description=OpenWGA still prefers the main documents language but is all
 
 single.title=No multi-language content
 single.description=OpenWGA will only serve content in the database default language (whose code is without meaning). Design labels will be presented in the best match of browser-configured languages. 
+
+browserlacale.title=Browser preferred Languages
+browserlacale.description=Browser Languages will be preferred, default Language used as fallback. 
