ajaxErrorHandling: JS-message improved.

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/labels/tml_de.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/labels/tml_de.properties
@@ -1,6 +1,6 @@
 ajax.sessionexpired.message=Die aktuelle Aktion kann leider nicht ausgef\u00fchrt werden weil der Aktionslink in einer anderen Session erzeugt wurde.
-ajax.failure.intro=Ein Problem ist bei der Verarbeitung dieser Aktion aufgetreten. Die aktuelle Aktion kann daher leider nicht ausgef\u00fchrt werden:
+ajax.failure.intro=Ein Problem ist bei der Verarbeitung dieser Aktion aufgetreten. Die aktuelle Aktion kann daher leider nicht ausgef\u00fchrt werden.
 ajax.failure.reload=Die Seite wird nun zur\u00fcckgesetzt.
 
-ajax.problem.changedencryption=Die Verschl\u00fcsselung des Servers hat sich ge\u00e4ndert. Die Seite muss neu geladen werden:
+ajax.problem.changedencryption=Die Verschl\u00fcsselung des Servers hat sich ge\u00e4ndert. Die Seite muss neu geladen werden.
 ajax.problem.unknown=Ein unbekannter Fehler ist bei der Verarbeitung aufgetreten. Die Operation steht momentan eventuell nicht zur Verf\u00fcgung.
