added (existing) p-option "URLBuilder" to module-definition

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -171,3 +171,6 @@ option.UseNonFinalHTFeatures.description=Controls if OpenWGA will use features o
 
 option.WebTML.EnhancedItemExpressions.title=Enable enhanced item expressions
 option.WebTML.EnhancedItemExpressions.description=If true will enable the usage of enhanced item expressions on a design that is of lower compliance than 7.2. If false the enablement is still dependent on the compliance. Be sure that you do not use WebTML variable/ WebTML option/content item names on that design that collide with this syntax: They must not contain dots or single quotes, must not start with a dollar sign and not consist entirely of numbers. 
+
+option.URLBuilder.title=Custom URL builder class name
+option.URLBuilder.description=Defines a java class name for a custom URL builder
