--- a/OpenWGA/plugins/cm/src/de/innovationgate/contentmanager/modules/poptions_cs.properties
+++ b/OpenWGA/plugins/cm/src/de/innovationgate/contentmanager/modules/poptions_cs.properties
@@ -17,6 +17,6 @@ option.CM.MaxTextUploadSize.title=Content Manager: Maximum upload size for text 
 option.CM.MaxTextUploadSize.description=This sets a size threshold for the uploading of single text fields (like items) in Content Manager. Overly large text fields may pose problems to item caches and break size boundaries of backend systems, so this option can be used to limit them. Attempting to upload a larger text field will be canceled before submission and show a warning message.   
 
 option.CM.PreventFormattedPasting.title=Content Manager: Allow pasting formatted text for IE
-option.CM.PreventFormattedPasting.description=Set this option to "Prevent" if you want to prevent authors from pasting formatted text from the clipboard into content editors, when they use Internet Explorer. This "browser" is incapable of letting OpenWGA filter pasted clipboard contents. Therefor OpenWGA cannot correct pasted text formattings and cannot ensure that the pasted HTML code does not break the pages functionality. 
+option.CM.PreventFormattedPasting.description=Set this option to "Prevent" if you want to prevent authors from pasting formatted text from the clipboard into content editors, when they use Internet Explorer. This "browser" is incapable of letting OpenWGA filter pasted clipboard contents. Therefore OpenWGA cannot correct pasted text formattings and cannot ensure that the pasted HTML code does not break the pages functionality. 
 option.CM.PreventFormattedPasting.value.off.title=Allow
 option.CM.PreventFormattedPasting.value.incapablebrowsers.title=Prevent
