#00005252: added new p-option to admin client UI

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -108,6 +108,9 @@ option.TitlePathURL.MixedLanguages.description=Enabling this will allow the gene
 option.TitlePathURL.IncludeKeys.title=Title path URLs: Include document keys
 option.TitlePathURL.IncludeKeys.description=Enabling this will make the title path URLs also contain the key of the addressed document. This makes addressation safer by eliminating problems with title changes and conflicts.
 
+option.TitlePathURL.UseStructkeysAsKey.title=Title path URLs: Use structkeys as key
+option.TitlePathURL.UseStructkeysAsKey.description=Use structkeys instead of page sequences as title path key.
+
 option.TitlePathURL.AllowUmlaute.title=Title path URLs: Allow German Umlaute
 option.TitlePathURL.AllowUmlaute.description=Enabling this will allow Umlaute in title path URLs.
 
