#00005772: Improvements to Title-Path-URLs

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -114,6 +114,9 @@ option.TitlePathURL.UseStructkeysAsKey.description=Use structkeys instead of pag
 option.TitlePathURL.AllowUmlaute.title=Title path URLs: Allow German Umlaute
 option.TitlePathURL.AllowUmlaute.description=Enabling this will allow Umlaute in title path URLs.
 
+option.TitlePathURL.EnhancedFormat.title=Title path URLs: Enhanced Format
+option.TitlePathURL.EnhancedFormat.description=Enabling this will allow more characters like parentheses ()[] in title path URLs.
+
 option.WebTMLCache.ServeStaleData.title=WebTML Cache is allowed to server stale data while updating
 option.WebTMLCache.ServeStaleData.description=When enabled a WebTML Cache may return stale data while the cache is recalculated on another thread. Disabling this will make requests wait for the recalculation of needed caches instead, which may lead to resource bottlenecks.
 
