#00005923: Simplified poster/thumbnail/preview sizes configuration

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -166,8 +166,10 @@ option.FileDerivates.Enabled.value.allCreators.title=All
 option.FileDerivates.Creators.title=File Derivates: Derivates to create
 option.FileDerivates.Creators.description=The derivates to be created for file attachments in this app
 
-option.FileDerivates.ThumbnailDerivateCreator.Sizes.title=File Derivates: Thumbnails: Sizes
-option.FileDerivates.ThumbnailDerivateCreator.Sizes.description=Sizes of thumbnails to create for image files. Specify one size per line in the format <maxwidth>x<maxheight>, for example "1000x400". The images will be scaled down while keeping ratio to fit inside both maximum sizes. Specify -1 for one dimension if you do not want to limit it, f.e. "1000x-1" to scale an image to 1000 pixels width without limiting height.
+option.FileDerivates.ThumbnailDerivateCreator.Sizes.title=File Derivates: Thumbnail Sizes
+option.FileDerivates.ThumbnailDerivateCreator.Sizes.description=Sizes of thumbnails to create for image files. \
+	Specify one width value per line. \
+	Alternatively you may specify the sizes in the format <maxwidth>x<maxheight>, for example "1000x400". The images will be scaled down while keeping ratio to fit inside both maximum sizes. Specify -1 for one dimension if you do not want to limit it, f.e. "1000x-1" to scale an image to 1000 pixels width without limiting height.
 
 option.FileAnnotators.title=File annotators
 option.FileAnnotators.description=Selects the file annotators to be active on this content store, which enhances attached files and created file derivates with additional metadata. All available annotators of the OpenWGA runtime are active if this option is absent.
