#00006027: TitlePath: added option to define languages for which default language titles should be used

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -117,6 +117,9 @@ option.TitlePathURL.AllowUmlaute.description=Enabling this will allow Umlaute in
 option.TitlePathURL.EnhancedFormat.title=Title path URLs: Enhanced Format
 option.TitlePathURL.EnhancedFormat.description=Enabling this will allow more characters like parentheses ()[] in title path URLs.
 
+option.TitlePathURL.UseDefaultLanguageTitles.title=Title path URLs: Use Default Language Titles
+option.TitlePathURL.UseDefaultLanguageTitles.description=List of languages for which titles from default language should be used.
+
 option.WebTMLCache.ServeStaleData.title=WebTML Cache is allowed to server stale data while updating
 option.WebTMLCache.ServeStaleData.description=When enabled a WebTML Cache may return stale data while the cache is recalculated on another thread. Disabling this will make requests wait for the recalculation of needed caches instead, which may lead to resource bottlenecks.
 
