--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -94,7 +94,7 @@ option.VarProvisioning.title=Variable provisioning to native expression language
 option.VarProvisioning.description=On WGA Content Stores which support a native expression language this setting controls, if WebTML variables should be provided to this language. If this is disabled, native expressions will no more be able to access WebTML variables but overall performance might be increased.
 
 option.TitlePathURL.title=Title path URLs
-option.TitlePathURL.description=Enables the usage and generation of Title path URLs for this database. This feature makes the URLs that adress content in this database look more userfriendly, as they will include the titles of the addressed document and their parent documents. This comes for the price of less "uniqueness" of these URLs and the possibility of name conflicts. 
+option.TitlePathURL.description=Enables the usage and generation of Title path URLs for this database. This feature makes the URLs that address content in this database look more userfriendly, as they will include the titles of the addressed document and their parent documents. This comes for the price of less "uniqueness" of these URLs and the possibility of name conflicts. 
 
 option.TitlePathURL.ContentIndexing.title=Title path URLs: Use content indexing
 option.TitlePathURL.ContentIndexing.description=Enables content indexes on Title Path URLs. This allows title path URLs to address documents with equal titles on the same path but may drain performance significantly if there are struct entries with many siblings in the database.
