PerMode: added default info

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_cs.properties
@@ -53,7 +53,7 @@ option.MultiLanguageContent.title=Multiple languages contained
 option.MultiLanguageContent.description=Activates/Deactivates support for content in multiple languages for this database. Should be deactivated if the database contains only one language that should be served to all users regardless of their language settings.
 
 option.PersMode.title=Personalisation mode
-option.PersMode.description=Controls the type of personalisation to use on this content store.
+option.PersMode.description=Controls the type of personalisation to use on this content store. Default is "session based (4)".
 
 option.PersMode.OptIn.title=Personalisation: User opt-in for persistent storage
 option.PersMode.OptIn.description=With this enabled a new user profile will stay in transient mode until the user confirms that he wants to persistently store user data. The design must offer a functionality to ask this confirmation. No persistent cookie will be sent while the profile is transient. If the session exists without the confirmation then the in-memory user profile is discarded.
